[package]
name = "tokio_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.13" }
deadpool = { version = "0.12.2", features = ["rt_tokio_1", "serde", "managed"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false
